Run spotless and exclude checkstyle on server module https://github.com/opensearch-project/OpenSearch/pull/1380
Signed-off-by: Owais Kazi <owaiskazi19@gmail.com>